# localdb

./: .gitignore  Dockerfile  Justfile  LICENSE  README.md  compose-debug.yml  compose-prod.yml  pyproject.toml
app/: entry.py
